add the paraments of jvm for running "ant all"